# AnimTrainer

./: .gitignore  CMakeLists.txt  README.txt  main.cpp
Resources/: ATrainerTDD.drawio
resources/: graph_json_test.json  vector_op_test_graph.json
src/: common.h  main.cpp
src/camera/: ATCamera.cpp  CMakeLists.txt
src/camera/include/: ATCamera.h
src/graph/: CMakeLists.txt
src/graph/impl/: ATGraph.cpp  GraphJson.cpp  GraphTypes.cpp
src/graph/impl/Nodes/: RegisterNodeTypes.cpp  TimeNode.cpp
src/graph/impl/Nodes/Math/: AddNode.cpp  MulOp.cpp  SinCosOp.cpp  VectorOp.cpp
src/graph/include/: AttributeTypeHandler.h  Graph.h  GraphJson.h  GraphTypes.h  NodeCompute.h
src/graph/include/Nodes/: RegisterNodeTypes.h  TimeNode.h
src/graph/include/Nodes/Math/: AddNode.h  MulOp.h  SinCosOp.h  VectorOp.h
src/math/: ATMath.cpp  CMakeLists.txt
src/math/include/: ATMath.h
src/random/: ATRandom.cpp  ATRandom.h  CMakeLists.txt
src/scene/: ATScene.cpp  CMakeLists.txt
src/scene/include/: ATAttribute.h  ATSceneGraph.h  ATSceneNode.h
src/scene/include/Attributes/: ATFloatAttribute.h  ATTransformAttribute.h  ATVec3Attribute.h
src/scene/include/Nodes/: ATDebugSphere.h  NodeInclude.h  TimeNode.h
src/tests/: CMakeLists.txt  GraphTests.cpp
